# cub3d

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  flake.nix  meson.build
.github/workflows/: sanity_check.yml
includes/: cub3d.h
includes/cub3d/: cub3d.h  parser.h
src/: config.c  main.c  parser.c
src/parsing/: config.c  parser.c
subprojects/: libft.wrap  mlx.wrap
test/: main.rs
tests/: main.rs
